hphp/hack/test/typecheck/array_set_error.php
<?hh

function foo(keyset<int> $k): void {
  $k[10] = 10;
}
